k8s/etapa-2.3/04-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-headless
  namespace: tipsbank-contas
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: tipsbank-contas
spec:
  serviceName: postgres-headless
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      imagePullSecrets:
        - name: registry-secret

      containers:
        - name: postgres
          image: postgres:16

          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data

            - name: init-sql
              mountPath: /docker-entrypoint-initdb.d/

      volumes:
        - name: init-sql
          configMap:
            name: postgres-init-sql

  volumeClaimTemplates:
    - metadata:
        name: postgres-data

      spec:
        accessModes:
          - ReadWriteOnce

        storageClassName: gp2

        resources:
          requests:
            storage: 2Gi

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: tipsbank-contas

spec:
  type: ClusterIP

  selector:
    app: postgres

  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
