k8s/etapa-2.3/auditoria-nfs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auditoria
  namespace: tipsbank-auditoria

spec:
  replicas: 3

  selector:
    matchLabels:
      app: auditoria

  template:
    metadata:
      labels:
        app: auditoria

    spec:
      securityContext:
        fsGroup: 65532

      imagePullSecrets:
        - name: registry-secret

      containers:
        - name: auditoria
          image: ghcr.io/brunosantostecinf-shell/tipsbank-auditoria:v1.0.0

          ports:
            - containerPort: 8080

          volumeMounts:
            - name: auditoria-data
              mountPath: /data

      volumes:
        - name: auditoria-data
          persistentVolumeClaim:
            claimName: pvc-tipsbank-auditoria-nfs

---
apiVersion: v1
kind: Service
metadata:
  name: auditoria
  namespace: tipsbank-auditoria

spec:
  type: ClusterIP

  selector:
    app: auditoria

  ports:
    - port: 8080
      targetPort: 8080
