k8s/etapa-2.3/ingress-auditoria.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-auditoria
  namespace: tipsbank-auditoria
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: api.bits.tec.br
      http:
        paths:
          - path: /auditoria(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auditoria
                port:
                  number: 8080
