k8s/etapa-2.3/ingress-transacoes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-transacoes
  namespace: tipsbank-transacoes
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: api.bits.tec.br
      http:
        paths:
          - path: /transacoes(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-transacoes
                port:
                  number: 8080
